--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
 
     <!-- Très important !!! Bloque le zoom automatique sur smartphones -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="cv-elouan" content="width=device-width, initial-scale=1.0">
 
     <!-- Titre de la page -->
-    <title>Elouan Kerouanton | Mon 1er code</title>
+    <title>cv-elouan</title>
 
     <!-- Auteur -->
     <meta name="author" content="Elouan Kerouanton">
 
     <!-- Favicons : icône de la page dans plusieurs tailles et formats -->
-    <link rel="apple-touch-icon" sizes="180x180" href="icone/apple-touch-icon.png">
+
     <link rel="icon" type="image/png" sizes="32x32" href="icone/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icone/favicon-16x16.png">
     <link rel="manifest" href="icone/site.webmanifest">
@@ -22,15 +22,44 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<h1>Titre de la page</h1>
-<p>Mon premier &lt;code&gt;</p>
-<p1>Ha, d'accord !</p1>
-<nav>
-    <ul>
-        <li>f</li>
-        <li>a</li>
-    </ul>
-</nav>
-<a></a>
+<header>
+    <a href="icone/favicon-32x32.png#" class="logo"><img src="icone/favicon-16x16.png"></a>
+
+    <nav>
+        <ul class="menu de navigation">
+            <li>
+                <a href="#1">Qui ?</a>
+            </li>
+            <li>
+                <a href="#2">Commant ?</a>
+            </li>
+            <li>
+                <a href="#3">Le latin c'est bien !</a>
+            </li>
+            <li>
+                <a href="#4">LA FIN !!!</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <h1>Monsieur Elouan Kerouanton</h1>
+    <h2 id = "1">Qui ?</h2>
+    <p>Bha, moi.</p>
+    <h2 id = "2">Commant ?</h2>
+    <p>Bha, C'est moi.</p>
+    <h2 id = "3">Le latin c'est bien !</h2>
+    <p>asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
+    asdfnéklajsdfékajfd éadf jaédjf éasdjf sdkfj édsfj aédsf jaé <br> <br></p>
+    <h2 id = "4">LA FIN !!!</h2>
+    <p>OUI !!!</p>
+
+
+</main>
+<footer>
+    &copy;2022 <a href="mailto:elouan.kerouanton@divtec.ch" target="_blank"> Mail</a>
+</footer>
 </body>
+
 </html>
