--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <!-- Très important !!! Bloque le zoom automatique sur smartphones -->
-    <meta name="cv-elouan" content="width=device-width, initial-scale=1.0">
+    <meta name="cv elouan kerouanton" content="width=device-width, initial-scale=1.0">
 
     <!-- Titre de la page -->
     <title>cv-elouan</title>
@@ -23,21 +23,23 @@
 </head>
 <body>
 <header>
-    <a href="icone/favicon-32x32.png#" class="logo"><img src="icone/favicon-16x16.png"></a>
+    <a href="icone/favicon-32x32.png" class="logo">
+        <img src="icone/favicon-16x16.png" alt="icone jeux">
+    </a>
 
     <nav>
-        <ul class="menu de navigation">
+        <ul class="menu">
             <li>
-                <a href="#1">Qui ?</a>
+                <a href="#qui">Qui ?</a>
             </li>
             <li>
-                <a href="#2">Commant ?</a>
+                <a href="#comment">Commant ?</a>
             </li>
             <li>
-                <a href="#3">Le latin c'est bien !</a>
+                <a href="#latin">Le latin c'est bien !</a>
             </li>
             <li>
-                <a href="#4">LA FIN !!!</a>
+                <a href="#fin">LA FIN !!!</a>
             </li>
         </ul>
     </nav>
@@ -45,21 +47,23 @@
 
 <main>
     <h1>Monsieur Elouan Kerouanton</h1>
-    <h2 id = "1">Qui ?</h2>
-    <p>Bha, moi.</p>
-    <h2 id = "2">Commant ?</h2>
-    <p>Bha, C'est moi.</p>
-    <h2 id = "3">Le latin c'est bien !</h2>
-    <p>asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
-    asdfnéklajsdfékajfd éadf jaédjf éasdjf sdkfj édsfj aédsf jaé <br> <br></p>
-    <h2 id = "4">LA FIN !!!</h2>
-    <p>OUI !!!</p>
 
+    <h2 id = "qui">Qui ?</h2>
+    <p>Bha, moi.</p>
+
+    <h2 id = "comment">Comment ?</h2>
+    <p>Bha, C'est moi.</p>
+
+    <h2 id = "latin">Le latin c'est bien !</h2>
+    <p>asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
+    asdfnéklajsdfékajfd éadf jaédjf éasdjf sdkfj édsfj aédsf jaé <br> <br><br><br><br><br><br><br><br><br></p>
+
+    <h2 id = "fin">LA FIN !!!</h2>
+    <p>OUI !!!</p>
 
 </main>
 <footer>
-    &copy;2022 <a href="mailto:elouan.kerouanton@divtec.ch" target="_blank"> Mail</a>
+    &copy;2022 <a href="mailto:elouan.kerouanton@divtec.ch"> email</a>
 </footer>
 </body>
-
 </html>
