--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <header>
     <a href="icone/favicon-32x32.png" class="logo">
-        <img src="icone/favicon-16x16.png" alt="icone jeux">
+        <img class="icone" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.icone-png.com%2Fpng%2F8%2F7536.png&f=1&nofb=1&ipt=837bca5a7ceca14738581215b35cedfc0a74e1b3a3538a3e0008b66f112c99fb&ipo=images" alt="icone jeux">
     </a>
 
     <nav>
