--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 </main>
 <footer>
-    &copy;2022 <a href="mailto:elouan.kerouanton@divtec.ch"> email</a>
+    &copy;2022 <a href="mailto:elouan.kerouanton@divtec.ch"> Email</a>
 </footer>
 </body>
 </html>
