Police et image aléatoire

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icone/favicon-16x16.png">
     <link rel="manifest" href="icone/site.webmanifest">
     <!--Styles CSS-->
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
 <header>
@@ -53,6 +55,8 @@
 
     <h2 id = "comment">Comment ?</h2>
     <p>Bha, C'est moi.</p>
+
+    <img src="https://placeimg.com/640/480/tech" alt="image aléatoire">
 
     <h2 id = "latin">Le latin c'est bien !</h2>
     <p>asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
