--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2 id = "comment">Comment ?</h2>
     <p>Bha, C'est moi.</p>
 
-    <img src="https://placeimg.com/640/480/tech" alt="image aléatoire">
+    <img class="aleatoire" src="https://placeimg.com/640/480/tech" alt="image aléatoire">
 
     <h2 id = "latin">Le latin c'est bien !</h2>
     <p>asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
