centrer et element 1 et 2

--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
 
     <img class="aleatoire" src="https://placeimg.com/640/480/tech" alt="image aléatoire">
 
+    <div class="conteneur">
+        <div class="box">🐸 Élément 1</div>
+        <div class="box">🦊 Élément 2</div>
+    </div>
+
     <h2 id = "latin">Le latin c'est bien !</h2>
-    <p>asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
+    <p class="ra">asdfj halkdsfhlhfal hflkasdh af kfh dfl hsdlfa sdf asjdhf ldfh aldfh adfhadlf hadlfh dlf ah <br>
     asdfnéklajsdfékajfd éadf jaédjf éasdjf sdkfj édsfj aédsf jaé <br> <br><br><br><br><br><br><br><br><br></p>
 
     <h2 id = "fin">LA FIN !!!</h2>
